<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="practicaltest01var08.eim.systems.cs.pub.ro.practicaltest01var08.PracticalTest02Var02MainActivity"
        tools:showIn="@layout/activity_practical_test01_var08_main">

    <Button
        android:id="@+id/navigate_button"
        android:text="@string/navigate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/text_view"
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="3"
        android:columnCount="3">

    <Button
        android:id="@+id/top_left_button"
        android:text="@string/top_left_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="center"
        android:gravity="center"/>

    <Button
        android:id="@+id/top_right_button"
        android:text="@string/top_right_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="2"
        android:layout_gravity="center"
        android:gravity="center"/>

    <Button
        android:id="@+id/center_button"
        android:text="@string/center_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="center"
        android:gravity="center"/>

    <Button
        android:id="@+id/bottom_left_button"
        android:text="@string/bottom_left_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="center"
        android:gravity="center"/>

    <Button
        android:id="@+id/bottom_right_button"
        android:text="@string/bottom_right_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="2"
        android:layout_gravity="center"
        android:gravity="center"/>
    </GridLayout>

</LinearLayout>
